--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,16 @@
-cmake_minimum_required(VERSION 3.10)
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+cmake_minimum_required(VERSION 3.25.0)
 project(shrew)
+
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+include(FetchContent)
+FetchContent_Declare(
+    gnuplot
+    GIT_REPOSITORY https://github.com/gnuplot/gnuplot.git
+    GIT_TAG 5.5
+)
+
+FetchContent_MakeAvailable(gnuplot)
+
 add_executable(shrew src/test.cpp src/normal_distribution.cpp src/random_variable.cpp)
