--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,10 +4,10 @@ FetchContent_Declare(
   URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
 )
 
+set(INSTALL_GMOCK OFF)
+set(INSTALL_GTEST OFF)
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-
-FetchContent_MakeAvailable(
-  googletest)
+FetchContent_MakeAvailable(googletest)
 
 enable_testing()
 
@@ -15,7 +15,6 @@ add_executable(shrew_tests normal_distribution.cpp compound_distribution.cpp gen
 target_link_libraries(
   shrew_tests
   GTest::gtest_main
-  Boost::math
   shrew
 )
 
