--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,13 +9,13 @@ set(INSTALL_GTEST OFF)
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
-enable_testing()
-
 add_executable(shrew_tests normal_distribution.cpp compound_distribution.cpp generic_distribution.cpp multivariate_normal.cpp)
 target_link_libraries(
   shrew_tests
   GTest::gtest_main
   shrew
 )
+
+add_test(NAME SHREWTESTS COMMAND shrew_tests)
 
 include(GoogleTest)
