--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.25.0)
 cmake_policy(SET CMP0148 OLD) # Make sure provided python executable is used
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 project(shrew)
 
 set(CMAKE_CXX_STANDARD 20)
