--- a/tests/gaussian_process/CMakeLists.txt
+++ b/tests/gaussian_process/CMakeLists.txt
@@ -9,13 +9,14 @@ set(INSTALL_GTEST OFF)
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
-add_executable(shrew_tests normal_distribution.cpp compound_distribution.cpp generic_distribution.cpp multivariate_normal.cpp)
+add_executable(shrew_tests_gp gaussian_process.cpp)
 target_link_libraries(
-  shrew_tests
+  shrew_tests_gp
   GTest::gtest_main
   shrew
+  gp
 )
 
-add_test(NAME SHREWTESTS COMMAND shrew_tests)
+add_test(NAME SHREWTESTS_GP COMMAND shrew_tests_gp)
 
 include(GoogleTest)
